app/static/css/index.css
:root {
  /* Colors */

  --primary-color: #ffaa00;
  --secondary-color: #219ebc;
  --dark-blue-color: #1d3557;
  --tertiary-color: #4e7bff;
  --quaternary-color: #ff5c5c;
  --black-color: #000000;
  --black-text-color: #212529;
  --grey-text-color: #333533;
  --white-color: #ffffff;

  /* Font */
  --font-main: 'Rajdhani', sans-serif;
  --font-secondary: 'Lato', sans-serif;
}

/* Box sizing rules by Picallily */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* Default selectors */
h1 {
  font-size: 2rem;
  font-weight: 600;
  color: var(--black-text-color);
}

input,
label {
  color: var(--black-text-color);
}

input[type='submit'] {
  background-color: var(--quaternary-color);
  color: var(--white-color);
  border: 1px solid var(--black-text-color);
  padding: 0.5rem 1rem;
  border-radius: 0.3rem;
  font-size: 1.3rem;
  font-weight: 600;
  cursor: pointer;
}

input:focus,
textarea:focus,
select:focus {
  outline: none;
}

body {
  background-color: var(--secondary-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  /* menu is off-screen that is why need to hide horizontal overflow */
  overflow-x: hidden;

  font-family: var(--font-main);
}

/* MAIN CONTAINER */
.main__wrapper {
  color: var(--white-color);
  border: 4px solid var(--black-color);
  display: flex;
  min-height: 100vh;
  width: 100%;
  flex-direction: column;
  justify-content: space-between;
}

.main__wrapper main {
  background-color: var(--secondary-color);
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 2rem;
}

.menu {
  display: none;
}

/* MOBILE HAMBURGER MENU */

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--black-color);
  width: 100%;
  transition: all 300ms ease-in-out;
  padding: 1rem 0;
}

nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: var(--black-color);
  width: 100%;
  transition: all 300ms ease-in-out;
}

.main-logo {
  color: var(--white-color);
  font-size: 2rem;
  font-weight: 600;
  text-decoration: none;
}

.nav-links {
  position: fixed;
  right: 0px;
  top: 0;
  left: 0;
  bottom: 0;
  height: 100vh;
  width: 100%;
  background-color: rgba(34, 34, 34, 1);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  opacity: 0.5;
  transition: all 400ms ease-in-out;
  margin: 0;
  overflow-y: auto;
  visibility: hidden;
  z-index: 999;
}

.nav-links li {
  opacity: 0;
  list-style: none;
}

.nav-links li a {
  color: var(--white-color);
  font-size: 1.6rem;
  font-weight: 600;
  text-decoration: none;
  margin: 1rem 0;
  transition: all 300ms ease-in-out;
}

.nav-active {
  display: flex;
  opacity: 1;
  visibility: visible;
}

.burger {
  cursor: pointer;
  z-index: 999;
}

.burger div {
  width: 28px;
  height: 4px;
  background-color: #ddd;
  margin: 5px;
  transition: all 300ms ease-in;
}

/* FOOTER */

footer {
  border-top: 1px solid var(--black-color);
  background-color: var(--secondary-color);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
}

footer a {
  color: var(--white-color);
  padding: 0 1.5rem;
  text-decoration: none;
  font-size: 1.8rem;
  position: relative;
  overflow: hidden;
  transition: color 0.5s cubic-bezier(0.5, 0, 0, 1);
}

footer a:hover {
  color: var(--black-color);
}

footer p {
  padding-top: 0.5rem;
  font-size: 0.8rem;
}

/* Users */

/* Unlogged user */
.unlogged__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: var(--font-secondary);
}

.unlogged__wrapper h1 {
  position: relative;
  color: var(--grey-text-color);
  font-family: inherit;
  font-size: 1.6rem;
  font-weight: 900;
  margin-bottom: 1.5rem;
  letter-spacing: 2px;
  z-index: 0;
}

.unlogged__wrapper h1::before {
  content: '';
  position: absolute;
  top: 0;
  left: 29%;
  width: 72%;
  height: 3rem;
  background-color: var(--quaternary-color);
  transform: skewX(-20deg);
  z-index: -1;
  opacity: 0.8;
}

.unlogged__wrapper p {
  color: var(--white-color);
  font-size: 1rem;
  font-weight: 600;
  margin-bottom: 1.5rem;
}

.unlogged__hero {
  position: relative;
}

.unlogged__hero a {
  position: absolute;
  top: 30%;
  left: 25%;
  color: var(--quaternary-color);
  background-color: var(--white-color);
  font-size: 1.2rem;
  font-weight: 600;
  text-decoration: none;
  margin-bottom: 1.5rem;
  border: 3px solid var(--quaternary-color);
  padding: 0.8rem 2.5rem;
  border-radius: 5px;
}

/* User dashboard */
.user-dashboard__wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
/* ... */

